compiler/fir/analysis-tests/testData/resolve/topLevelDestruction.kt
val <!SYNTAX!>(x, y)<!> = Pair(1, 2)
